# haskell-playground

./: arg-test.hs  baby.hs  btree.hs  capslocker  capslocker.hi  count_lines_catch.hs  deletetodo.hs  getchar_test.hs  getline.hs  girlfriend.hs  girlfriendtocaps.hs  guess_the_number.hs  haiku.txt  heathrow.hs  helloworld  name  name.hs  palindromes.hs  putstr.hs  reverse.hs  shortlinesonly  shortlinesonly.hi  shortlinesonly.hs  solveRPN.hs  something.txt  todo.hs  todo.txt  writer.hs
level2/stateM/: Main.hs  myfirstapp.cabal
myfirstapp/: myfirstapp.cabal
myfirstapp/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
