cabal-version:       >=2.0
name:                statem
version:             0.1.0.0
license:             NONE
license-file:        LICENSE
author:              Fabien Boucher
maintainer:          fboucher@redhat.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable myfirstapp
  main-is:             Main.hs
  build-depends:
    base >=4.13 && <4.14,
    mtl ^>=2.2.2
  default-language:    Haskell2010
